right, need that folder too
also, back to VM based infra
and don't run test suite, it still takes too long

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false # todo: required --> GCE VMs have better performance (will be upgrading to premium VMs soon)
+sudo: required # GCE VMs have better performance (will be upgrading to premium VMs soon)
 
 # this builds the spec using jekyll
 # based on http://www.paperplanes.de/2013/8/13/deploying-your-jekyll-blog-to-s3-with-travis-ci.html
